fix extra gap after image

--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,10 @@ p {
   margin: 0;
 }
 
+img {
+  display: block;
+}
+
 :root {
   --white: hsl(0, 0%, 100%);
   --slate-300: hsl(212, 45%, 89%);
